# toy-codes

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  reformat-all.sh  vcpkg.json  windows-run-before-main.cpp
src/: CMakeLists.txt  axEQb.cpp  main_axEQb.cpp  main_string_trimmming.cpp  my_cpuid.h  simd.cpp  trim_leading_trailing_white_space_from_strings.h
src/axEQb/: CMakeLists.txt  LU-eigen3-mkl.cpp  LU-eigen3.cpp  axEQb.cpp
src/chrono_tool/: CMakeLists.txt  chrono-tool.cpp  chrono_tool.cpp
src/cuda/: CMakeLists.txt  TODO  cuda-docs-refs.md  cuda_mandelbrot.cu  grid-stride.cu  main.cu  nvidia-seperate-compilation.cu  particle.cu  particle.h  simple-bench.cu  v3.cu  v3.h
src/fizzbuz/: fizzbuz-03.S
src/sdl3-imgui/: CMakeLists.txt  CMakePresets.json
src/sdl3-imgui/src/: CMakeLists.txt  gui.cpp  gui.h  main.cpp
src/sdl3-imgui/src/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/simd/: CMakeLists.txt  benc1h.cpp  bench.cpp  my_cpuid.h  simd.cpp  x86_x64 SIMD Instruction List (SSE to AVX512).htm
src/simd/x86_x64 SIMD Instruction List (SSE to AVX512)_files/: alog.php
src/simd2/: CMakeLists.txt  aligned_load.cpp  gcc_pragma_avx2.cpp  intrinsics.cpp  vcpkg.json
src/smart-pointers/: 00-call_stack_highjack  00-call_stack_highjack.c  01-call_stack_highjack-fixed  01-call_stack_highjack-fixed.c  02-smart-pointer  02-smart-pointer.c  03-smart-pointers  03-smart-pointers.c  A Tiny Guide to GCC Inline Assembly _ ericw.ca Eric Woroshow.html  Makefile  Stack frame layout on x86-64 - Eli Bendersky's website.html  Stupid Smart Pointers in C.html  trampoline-rename.S  trampoline.S
src/smart-pointers/Stupid Smart Pointers in C_files/: highlight.pack.js  style.css
src/string_trim/: CMakeLists.txt  string_trimmming.cpp  trim_leading_trailing_white_space_from_strings.h
src/vulkan-compute/: CMakeLists.txt  notes.md  square.hlsl  vk_mem_alloc.h  vulkan-compute.cpp
win-qemu/: notes.txt
